Add cart, password reset, and featured products
Implemented shopping cart functionality with add, remove, and clear actions, and database support. Added password reset flow with token management and reset forms. Home page now displays featured products with add-to-cart, and global cart count is shown in the navbar. Security config updated for CSRF and password encoding. Admin seeding and password normalization are now handled via config and code, removing SQL migrations for admin user. Added new Flyway migrations for cart and password reset tables.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+spring.config.import=optional:file:.env.properties
 logging.level.org.springframework.jdbc.core=DEBUG
